--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@
 # This source code is licensed under the license found in the
 # LICENSE file in the root directory of this source tree.
 #
-numpy==1.15.4
-torch==1.1.0
+numpy
+torch
